# tea

./: .gitignore  README.md  pyproject.toml
design/: concept.md  ユーザーストーリー.md  機能一覧.md  要件定義書.md
frontend/: .dockerignore  Dockerfile  README.md  cloudbuild.yaml  cors.json  eslint.config.mjs  firebase-config.example.txt  firebase-setup-guide.md  firebase-storage-rules.txt  next.config.ts  package-lock.json  package.json
frontend/scripts/: cloud-run.sh
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/contexts/: AdkContext.tsx  AuthContext.tsx  ChatContext.tsx  LanguageContext.tsx  NavContext.tsx  OnboardingContext.tsx  SidebarContext.tsx
frontend/src/hooks/: useCamera.ts  useConnection.ts  useHydration.ts  useMetadata.ts  useSSE.ts  useWebSocket.ts
frontend/src/lib/: firebase.ts
frontend/src/services/: connectionPoolService.ts  (+2 more)
prompts/: SettingAnalysisAgent.txt  ToolsAnalysisAgent.txt  ToolsBasicKnowledgeAgent.txt
sample-python/: agent.py
sample-yaml/: __init__.py  root_agent.yaml  tool_analysis_agent.yaml  tool_basic_knowledge_agent.yaml  tool_identify_agent.yaml
server/: .dockerignore  .env  .gcloudignore  Dockerfile  README.md  agent_operator.py  app.py  models.py  openapi.yaml  requirements.txt  test.py
server/adk/: agent.py  agent_alt.py
server/docs/: deploy-cloud-run.md
server/front-demo/: README.md  next.config.js  package.json  pnpm-lock.yaml
server/scripts/: cloud-run.sh
server/server/: __init__.py  app_state.py  config.py
server/tests/: conftest.py  test_coordinator.py  test_routes_sse.py  test_routes_ws.py
(+98 files in other folders)
